--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "animate.css": "^4.1.1",
+    "apexcharts": "^3.43.0",
+    "chart.js": "^4.4.0",
+    "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
