--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@capacitor/ios": "^5.4.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capawesome/capacitor-file-picker": "^5.1.1",
     "@ionic/angular": "^7.0.0",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.43.0",
     "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
     "ng-apexcharts": "^1.8.0",
