--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ionicons": "^7.0.0",
     "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
+    "timers": "^0.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
