--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.4.2",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "^5.1.1",
     "@ionic/angular": "^7.0.0",
+    "@ionic/pwa-elements": "^3.2.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.43.0",
     "chart.js": "^4.4.0",
