--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "^5.4.2",
     "@capacitor/app": "5.0.6",
+    "@capacitor/browser": "^5.1.0",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.4.2",
     "@capacitor/haptics": "5.0.6",
