--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rxjs": "~7.8.0",
     "timers": "^0.1.1",
     "tslib": "^2.3.0",
+    "webview": "^1.1.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
