--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
+    "isomorphic-unfetch": "^4.0.2",
     "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "timers": "^0.1.1",
