--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capawesome/capacitor-file-picker": "^5.1.1",
-    "@ionic/angular": "^7.0.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/fingerprint-aio": "^5.36.0",
+    "@ionic/angular": "^7.5.4",
     "@ionic/pwa-elements": "^3.2.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.43.0",
     "chart.js": "^4.4.0",
+    "cordova-plugin-fingerprint-aio": "^5.0.1",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
