--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -44,7 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSFaceIDUsageDescription</key>
-	<string>We use Face ID for secure authentication.</string>
+	<string>auth</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 </dict>
